--- a/events.css
+++ b/events.css
@@ -35,7 +35,9 @@ img {
   .event-intro {
     max-width: 1200px;
     margin: 0 auto;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
     gap: 60px;
     padding: 40px 20px;
   }
@@ -73,6 +75,12 @@ img {
   background-color: #6a1717;
   color: white;
   line-height: 1.8;
+  transition: transform 0.3s ease; /*Så når den hover mere smooth*/
+}
+
+.event-produkt:hover {
+  transform: scale(1.05);
+  cursor: pointer;
 }
 
 .h3_events {
@@ -152,6 +160,7 @@ img {
   padding: 15px 37px;
   border: 1px;
   color: white;
+  transition: transform 0.3s ease;
 }
 
 .booking-knap:hover {
@@ -170,7 +179,7 @@ img {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 15px;
-  padding-top: 80px;
+  padding: 80px 20px;
 }
 
 @media (min-width: 768px) {
@@ -178,116 +187,5 @@ img {
     grid-template-columns: repeat(3, 300px);
     justify-content: center;
     gap: 30px;
-  }
-}
-
-/***** FOOTER ***/
-footer {
-  background-color: #331a1a;
-  color: #d6d6d6;
-  text-align: left;
-  padding: 30px;
-  margin-top: 40px;
-}
-
-footer h2 {
-  font-size: 35px;
-  font-weight: bolder;
-  margin: 20px auto;
-}
-
-footer h3 {
-  font-size: 16px;
-  max-width: 300px;
-  line-height: 1.7;
-  font-weight: lighter;
-}
-
-.sign-up {
-  padding: 25px;
-}
-
-.search-input {
-  min-width: 290px;
-  padding: 15px;
-  font-size: 11px;
-  border: 1px;
-  border-radius: 20px;
-}
-
-.sign-up-button {
-  background-color: #fdbc28;
-  cursor: pointer;
-  border-radius: 20px;
-  text-align: center;
-  margin: 5px;
-  padding: 15px;
-  border: 1px;
-}
-
-.sign-up-button:hover {
-  background-color: #ffcb57;
-  transform: scale(1.03);
-}
-
-.kontakt {
-  line-height: 1.8;
-  font-size: 16px;
-}
-
-.kontakt a {
-  color: #d6d6d6;
-  text-decoration: underline;
-}
-
-.kontakt a:hover {
-  color: #ffcb57; /* change to your desired hover color */
-}
-
-.rapport {
-  font-size: 13px;
-  padding-top: 50px;
-  line-height: 1.8;
-  font-weight: 100;
-}
-
-.rapport img {
-  max-width: 30px;
-}
-
-@media (min-width: 768px) {
-  .search-input {
-    min-width: 490px;
-    font-size: 14px;
-  }
-
-  .sign-up-button {
-    padding: 15px 40px;
-    font-size: 14px;
-  }
-
-  .sign-up {
-    padding-top: 25px;
-  }
-
-  .kontakt {
-    font-size: 15px;
-  }
-
-  .footer-nederst {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-
-  .rapport {
-    text-align: right;
-    font-size: 15px;
-  }
-
-  .rapport img {
-    max-width: 45px;
-    display: block;
-    margin: 0 0 0 auto;
   }
 }
