--- a/menukort.css
+++ b/menukort.css
@@ -10,11 +10,16 @@ img {
   height: auto;
   display: block;
 }
+/*************** js filter knapper **************/
+.hidden {
+  display: none;
+}
 
 /******************************* TEKST **************************/
 
 h1 {
   margin-top: 30px;
+  margin-left: 15px;
 }
 
 h2 {
@@ -31,6 +36,19 @@ h2 {
 
 /***************** BILLEDER *****************/
 .italy_img2 {
+  display: none;
+}
+
+.italy_img1 {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.rhone_img1 {
+  display: none;
+}
+
+.spain_img {
   display: none;
 }
 
@@ -124,6 +142,14 @@ li {
     align-items: stretch;
   }
 
+  .grid_1-1_others {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    align-items: stretch;
+    margin-top: 20px;
+  }
+
   .grid_1-1_spain {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -131,8 +157,26 @@ li {
     align-items: stretch;
     margin-top: 50px;
   }
+
+  .grid_1-1_cheese {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center; /* centrer lodret */
+    justify-content: center; /* centrer vandret */
+  }
+
+  .grid_1-1_drinks {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+
   /********* Rhone section *********/
   .rhone_img1 {
+    display: block;
     margin-top: 40px;
     max-height: 245px;
     overflow: hidden; /* skjuler det overskydende af billedet */
@@ -159,6 +203,11 @@ li {
     max-width: 700px;
   }
 
+  /*********** Spain ************/
+
+  .spain_img {
+    display: block;
+  }
   /*********** menu section ***********/
   .menu_section {
     margin-left: 240px;
@@ -177,5 +226,25 @@ li {
   h2 {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  /*********************** FOOD ********************/
+  .cheese_img {
+    max-width: 500px;
+    display: flex;
+    align-items: center; /* centrer lodret */
+    justify-content: center; /* centrer vandret */
+  }
+
+  .tapas_img {
+    max-height: 410px;
+    overflow: hidden; /* skjuler det overskydende af billedet */
+    object-fit: cover;
+    margin-top: 50px;
+  }
+
+  /*************** DRINKS *****************/
+  .drinks_img {
+    margin-top: 80px;
   }
 }
