--- a/style.css
+++ b/style.css
@@ -22,6 +22,43 @@ html {
   background-color: white;
 }
 
+/***************** FONTE ****************/
+.anton-regular {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.nunito-sans {
+  font-family: "Nunito Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 2;
+  font-style: normal;
+  font-variation-settings: "wdth" 100, "YTLC" 500;
+}
+
+h1 {
+  font-family: "Anton", sans-serif;
+  letter-spacing: 2%;
+  font-size: 2.3rem;
+  font-weight: 100;
+  color: white;
+}
+
+h2 {
+  font-family: "Nunito Sans", sans-serif;
+  letter-spacing: 2%;
+  font-size: 1.5rem;
+  color: white;
+}
+
+p {
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 100;
+  font-size: 1rem;
+  color: white;
+}
+
 /******************** MENU ************************************/
 
 header {
@@ -184,7 +221,7 @@ footer h3 {
 }
 
 .sign-up {
-  padding: 25px;
+  padding-block: 25px;
 }
 
 .search-input {
@@ -192,7 +229,7 @@ footer h3 {
   padding: 15px;
   font-size: 11px;
   border: 1px;
-  border-radius: 20px;
+  border-radius: 13px;
 }
 
 .sign-up-button {
