forside ikke done test

--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ footer h2 {
   font-size: 35px;
   font-weight: bolder;
   margin: 20px auto;
+  font-family: "Anton", sans-serif;
 }
 
 footer h3 {
