--- a/menukort.css
+++ b/menukort.css
@@ -79,6 +79,10 @@ li {
   opacity: 20%;
 }
 
+.menu_section {
+  padding: 20px;
+}
+
 /***************************** KNAPPER ********************************/
 
 /********** hvide knapper *********/
