--- a/produkt.css
+++ b/produkt.css
@@ -17,20 +17,26 @@ main {
 }
 /*************** Mobil *********************/
 .produkt_intro {
-  padding: 30px;
+  padding: 40px;
 }
 .produkt_intro h1 {
   margin-bottom: 40px;
 }
 .produkt_description {
-  margin-block: 20px;
-  background-color: #6f3535;
-  padding: 30px;
+  background-color: #6a1717;
+  padding: 40px;
 }
+
 .produkt_description p {
   max-width: 350px;
   line-height: 2.2;
 }
+
+.produkt_description p {
+  max-width: 400px;
+  line-height: 2.2;
+}
+
 .produkt_description h2 {
   margin-bottom: 20px;
 }
@@ -39,16 +45,17 @@ main {
   object-fit: cover;
   padding: 20px;
 }
+
 .knap {
-  background-color: #fdbc28;
   cursor: pointer;
-  border-radius: 5px;
+  background-color: #fdbc28;
   text-align: center;
-  padding: 10px 5px; /* Fjern den horisontale padding */
+  margin-top: 27px;
   text-decoration: none;
-  margin-top: 20px;
+  padding: 10px 37px;
+  border: 1px;
   color: black;
-  border: none;
+  transition: transform 0.3s ease;
 }
 
 .knap:hover {
@@ -63,12 +70,17 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    margin-bottom: 60px;
   }
   .produkt_description p {
     max-width: 800px;
   }
   .produkt_intro {
     margin-top: 50px;
-    padding: 80px;
+    margin-left: 10px;
+  }
+
+  .knap {
+    padding: 12px 50px;
   }
 }
