--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 html {
   background-color: white;
 }
-
 /***************** FONTE ****************/
 .anton-regular {
   font-family: "Anton", sans-serif;
@@ -48,8 +47,12 @@ h1 {
 h2 {
   font-family: "Nunito Sans", sans-serif;
   letter-spacing: 2%;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   color: white;
+}
+
+h3 {
+  font-family: "Nunito Sans", sans-serif;
 }
 
 p {
@@ -57,6 +60,42 @@ p {
   font-weight: 100;
   font-size: 1rem;
   color: white;
+}
+
+button {
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 750;
+  border-radius: 7px;
+  transition: transform 0.3s ease;
+  font-size: 0.9rem;
+}
+
+@media (min-width: 768px) {
+  button {
+    font-size: 0.9rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+}
+
+button:hover {
+  transform: scale(1.03);
+}
+
+a {
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 750;
+  transition: transform 0.3s ease;
+}
+
+a:hover {
+  transform: scale(1.03);
 }
 
 /******************** MENU ************************************/
@@ -117,6 +156,11 @@ header {
   }
 }
 
+.nav-link.active {
+  color: #fdbc28;
+  font-weight: 600;
+}
+
 /********** burger *****************/
 header {
   position: sticky;
@@ -172,7 +216,7 @@ header {
     display: block;
     background-color: #331a1a;
     position: absolute;
-    top: 63px;
+    top: 60px;
     left: 0;
     width: 100%;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
@@ -184,7 +228,7 @@ header {
   }
 
   nav.active .menu a {
-    font-size: 24px;
+    font-size: 1.3rem;
   }
   .menu a {
     color: white;
@@ -230,16 +274,17 @@ footer h3 {
   padding: 15px;
   font-size: 11px;
   border: 1px;
-  border-radius: 13px;
+  border-radius: 7px;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 .sign-up-button {
   background-color: #fdbc28;
   cursor: pointer;
-  border-radius: 20px;
   text-align: center;
   margin: 5px;
   padding: 15px;
+  border-radius: 7px;
   border: 1px;
   transition: transform 0.3s ease;
 }
@@ -282,7 +327,7 @@ footer h3 {
   }
 
   .sign-up-button {
-    padding: 15px 40px;
+    padding: 13px 53px;
     font-size: 14px;
   }
 
