--- a/index.css
+++ b/index.css
@@ -16,6 +16,14 @@ img {
 /****** Forside billede og tekst ***********/
 .forside_img_relative {
   position: relative;
+  width: 100vw; /*Gør billedet ligeså bred som hele skærmen*/
+  margin-left: calc(50% - 50vw); /*billedet bliver centreret ift. skærmen og ikke main*/
+}
+
+.forside_img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 .forside_h1_p_absolute {
@@ -118,7 +126,9 @@ img {
 .location_opening_backcolor {
   background-color: #6a1717;
   color: white;
-  padding: 15px 45px 30px 45px;
+  padding: 30px 45px 30px 45px;
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
 }
 
 .opening_h2 {
@@ -136,10 +146,13 @@ img {
 
 /******** About us section *********************/
 .about_us_section {
-  margin-top: 30px;
+  /* margin-top: 30px;
   margin-bottom: 35px;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 15px; */
+  max-width: 420px;
+  margin: 0 auto;
+  padding-block: 37px;
 }
 
 .about_us_h2 {
@@ -152,20 +165,20 @@ img {
 }
 
 .about_us_img {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 /********* Ratings ***************************/
 .ratings_h2 {
   margin-top: 30px;
-  margin-left: 15px;
+  margin-left: 20px;
 }
 
 .rating_box {
   max-width: 250px;
   height: 250px;
-  padding: 20px 30px;
+  padding: 30px 30px;
   background-color: #ffcb57;
   border-radius: 7px;
   flex-shrink: 0;
@@ -218,8 +231,7 @@ img {
     display: flex;
     align-items: center; /* centrer lodret */
     justify-content: center; /* centrer vandret */
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 38px;
     margin-top: 20px;
     margin-bottom: 80px;
   }
@@ -256,12 +268,6 @@ img {
 
   .forside_button {
     margin: 20px;
-  }
-
-  /******** Ratings ******************/
-  .ratings_section {
-    margin-left: 100px;
-    margin-right: 100px;
   }
 }
 
