--- a/produkt.css
+++ b/produkt.css
@@ -16,20 +16,19 @@ main {
   margin: 0 auto;
 }
 /*************** Mobil *********************/
+
 .produkt_intro {
-  padding: 40px;
+  padding: 20px;
 }
 .produkt_intro h1 {
   margin-bottom: 40px;
+  margin-top: 15px;
 }
 .produkt_description {
   background-color: #6a1717;
-  padding: 40px;
-}
-
-.produkt_description p {
-  max-width: 350px;
-  line-height: 2.2;
+  padding: 30px;
+  width: 100vw; /*Gør billedet ligeså bred som hele skærmen*/
+  margin-left: calc(50% - 50vw); /*billedet bliver centreret ift. skærmen og ikke main*/
 }
 
 .produkt_description p {
@@ -41,9 +40,11 @@ main {
   margin-bottom: 20px;
 }
 .produkt_img {
-  max-width: 500px;
-  object-fit: cover;
   padding: 20px;
+  aspect-ratio: 4/ 3;
+  width: 100%;
+  max-width: 670px;
+  object-fit: cover;
 }
 
 .knap {
@@ -72,14 +73,23 @@ main {
     gap: 20px;
     margin-bottom: 60px;
   }
+  .produkt_intro h1 {
+    margin-top: 5px;
+  }
   .produkt_description p {
     max-width: 800px;
+    margin-left: 120px;
+  }
+  .produkt_description h2 {
+    margin-left: 120px;
   }
   .produkt_intro {
     margin-top: 50px;
-    margin-left: 10px;
   }
-
+  .produkt_img {
+    padding: 10px;
+    padding-top: 80px;
+  }
   .knap {
     padding: 12px 50px;
   }
