--- a/menukort.css
+++ b/menukort.css
@@ -15,12 +15,10 @@ img {
 
 h1 {
   margin-top: 30px;
-  margin-left: 15px;
 }
 
 h2 {
   margin-top: 40px;
-  margin-left: 15px;
   margin-bottom: 10px;
 }
 
@@ -36,8 +34,10 @@ h2 {
 }
 
 .italy_img1 {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-top: 40px;
+  margin-bottom: -20px;
+  /* margin-left: 15px;
+  margin-right: 15px; */
 }
 
 .rhone_img1 {
@@ -54,8 +54,8 @@ li {
   display: flex;
   align-items: center;
   gap: 5px;
-  margin-left: 15px;
-  margin-right: 15px;
+  /* margin-left: 15px;
+  margin-right: 15px; */
   margin-bottom: 20px;
 }
 
@@ -130,6 +130,28 @@ li {
 .filter_buttons {
   display: flex;
 }
+/************** back to top knap ******************/
+.back-to-top {
+  position: fixed; /* gør at den bliver siddende */
+  bottom: 20px; /* afstand fra bunden af skærmen */
+  right: 20px; /* afstand fra højre side */
+
+  background-color: #fdbc28;
+  border-radius: 3px;
+  color: black;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 1px 8px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back-to-top:hover {
+  transform: scale(1.05);
+}
 
 /************************* DESKTOP ***********************/
 @media (min-width: 768px) {
@@ -193,18 +215,15 @@ li {
 
   /*********** Italy section ***********/
   .italy_img1 {
-    max-width: 390px;
+    max-width: 370px;
     margin-top: 40px;
+    margin-bottom: 20px;
   }
 
   .italy_img2 {
     display: block;
-    max-width: 390px;
+    max-width: 370px;
     margin-top: 20px;
-  }
-
-  .italy_section {
-    max-width: 700px;
   }
 
   /*********** Spain ************/
@@ -214,8 +233,8 @@ li {
   }
   /*********** menu section ***********/
   .menu_section {
-    margin-left: 240px;
-    margin-right: 240px;
+    max-width: 1200px;
+    margin: auto;
     background-color: #6a1717;
     padding: 10px 20px;
     margin-top: 50px;
@@ -250,5 +269,26 @@ li {
   /*************** DRINKS *****************/
   .drinks_img {
     margin-top: 80px;
+  }
+
+  /************** back - to - top knap ************/
+  .back-to-top {
+    position: fixed; /* gør at den bliver siddende */
+    bottom: 25px; /* afstand fra bunden af skærmen */
+    right: 25px; /* afstand fra højre side */
+
+    background-color: transparent;
+    border: 2px solid #fdbc28;
+    border-radius: 7px;
+    color: #fdbc28;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 2px 8px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 1000; /* sikrer at den ligger over indhold */
   }
 }
