små rettelser done

--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ img {
 
 .forside_h2 {
   font-size: 1.3rem;
-  font-weight: 200;
+  font-weight: 400;
 }
 
 @media (min-width: 768px) {
@@ -55,22 +55,23 @@ img {
 }
 
 /****** Buttons ****************/
+
 .forside_button {
   background-color: #fdbc28;
   cursor: pointer;
   border-radius: 7px;
   text-align: center;
-  padding: 10px 0; /* Fjern den horisontale padding */
-  flex: 1; /* Gør knappen fleksibel og fylder lige meget */
+  padding: 10px 0;
+  flex: 1;
   margin: 10px;
   text-decoration: none;
   color: black;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
 }
 
 .forside_button:hover {
-  background-color: #ffcb57;
-  transform: scale(1.03);
+  background-color: #fde38a;
+  transform: scale(1.05);
 }
 
 .forside_button_tekst {
@@ -179,7 +180,7 @@ img {
   max-width: 250px;
   height: 250px;
   padding: 30px 30px;
-  background-color: #ffcb57;
+  background-color: #fde38a;
   border-radius: 7px;
   flex-shrink: 0;
   line-height: 1.45;
@@ -205,6 +206,7 @@ img {
 
 .rating_scroll p {
   color: black;
+  font-weight: 300;
 }
 
 /******************** DESKTOP *******************************************************************************/
@@ -268,117 +270,5 @@ img {
 
   .forside_button {
     margin: 20px;
-  }
-}
-
-/**************** FOOTER *********************/
-
-footer {
-  background-color: #331a1a;
-  color: #d6d6d6;
-  text-align: left;
-  padding: 30px;
-  margin-top: 40px;
-}
-
-footer h2 {
-  font-size: 35px;
-  font-weight: bolder;
-  margin: 20px auto;
-}
-
-footer h3 {
-  font-size: 16px;
-  max-width: 300px;
-  line-height: 1.7;
-  font-weight: lighter;
-}
-
-.sign-up {
-  padding: 25px;
-}
-
-.search-input {
-  min-width: 290px;
-  padding: 15px;
-  font-size: 11px;
-  border: 1px;
-  border-radius: 20px;
-}
-
-.sign-up-button {
-  background-color: #fdbc28;
-  cursor: pointer;
-  border-radius: 20px;
-  text-align: center;
-  margin: 5px;
-  padding: 15px;
-  border: 1px;
-}
-
-.sign-up-button:hover {
-  background-color: #ffcb57;
-  transform: scale(1.03);
-}
-
-.kontakt {
-  line-height: 1.8;
-  font-size: 16px;
-}
-
-.kontakt a {
-  color: #d6d6d6;
-  text-decoration: underline;
-}
-
-.kontakt a:hover {
-  color: #ffcb57; /* change to your desired hover color */
-}
-
-.rapport {
-  font-size: 13px;
-  padding-top: 50px;
-  line-height: 1.8;
-  font-weight: 100;
-}
-
-.rapport img {
-  max-width: 30px;
-}
-
-@media (min-width: 768px) {
-  .search-input {
-    min-width: 490px;
-    font-size: 14px;
-  }
-
-  .sign-up-button {
-    padding: 15px 40px;
-    font-size: 14px;
-  }
-
-  .sign-up {
-    padding-top: 25px;
-  }
-
-  .kontakt {
-    font-size: 15px;
-  }
-
-  .footer-nederst {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-
-  .rapport {
-    text-align: right;
-    font-size: 15px;
-  }
-
-  .rapport img {
-    max-width: 45px;
-    display: block;
-    margin: 0 0 0 auto;
   }
 }
