--- a/menukort.css
+++ b/menukort.css
@@ -36,8 +36,6 @@ h2 {
 .italy_img1 {
   margin-top: 40px;
   margin-bottom: -20px;
-  /* margin-left: 15px;
-  margin-right: 15px; */
 }
 
 .rhone_img1 {
@@ -54,8 +52,6 @@ li {
   display: flex;
   align-items: center;
   gap: 5px;
-  /* margin-left: 15px;
-  margin-right: 15px; */
   margin-bottom: 20px;
 }
 
@@ -66,6 +62,11 @@ li {
 
 .menu_price {
   white-space: nowrap; /* Gør at teksen ikke skrifter linje*/
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 100;
+  font-size: 1rem;
+  color: white;
+  opacity: 80%;
 }
 
 .menu_line {
@@ -82,19 +83,20 @@ li {
 /***************************** KNAPPER ********************************/
 
 /********** hvide knapper *********/
-.gul_knap_menu {
+.forside_button {
   background-color: #fdbc28;
-  color: black;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 7px;
   text-align: center;
-  padding: 10px 5px;
+  padding: 10px 0;
   flex: 1;
   margin: 10px;
   text-decoration: none;
+  color: black;
+  font-size: 0.9rem;
 }
 
-.gul_knap_menu:hover {
+.forside_button:hover {
   background-color: #fde38a;
   transform: scale(1.05);
 }
@@ -263,7 +265,7 @@ li {
     max-height: 410px;
     overflow: hidden; /* skjuler det overskydende af billedet */
     object-fit: cover;
-    margin-top: 50px;
+    margin-top: 95px;
   }
 
   /*************** DRINKS *****************/
