link rettelser done

--- a/events.css
+++ b/events.css
@@ -12,6 +12,10 @@ img {
 
 /***** events *******/
 
+a {
+  text-decoration: none;
+}
+
 .event-intro {
   padding-left: 45px;
   padding-right: 45px;
